--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,37 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+/*Change curser of button to pointer*/
+button{
+  cursor: pointer;
+}
+
+/*Display size of the display word*/
+.guessWordDisplay{
+  font-size: 2em;
+}
+
+/*Set the buttons colors and font*/
+.alphabet-0{
+ color:blue;
+}
+.alphabet-1{
+  background-color: lime;
+}
+.alphabet-2{
+  background-color: red;
+}
+.helpButton{
+  color:blue;
+  font-weight: bolder;
+}
+
+/*Set the image size and padding*/
+.hangmanImage{
+  width: 150px;
+  height: 250px;
+}
+.gameOverImage{
+  width: 250px;
+  height: 250px;
+}
